--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ include(DuneMacros)
 dune_project()
 
 add_subdirectory("m4")
-add_subdirectory("dune")
 add_subdirectory("doc")
+add_subdirectory(dune EXCLUDE_FROM_ALL)
 add_subdirectory("lib")
 add_subdirectory("src")
 add_subdirectory("cmake/modules")
