--- a/dune/grid/io/file/CMakeLists.txt
+++ b/dune/grid/io/file/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(amiramesh)
-add_subdirectory(test EXCLUDE_FROM_ALL)
+add_subdirectory(test)
 add_subdirectory(dgfparser)
 add_subdirectory(vtk)
 add_subdirectory(gnuplot)
